# datacontract-validator

./: .gitignore  CNAME  README.md  index.html  pyproject.toml
backend/: Dockerfile  main.py  pyproject.toml
