[project]
name = "datacontract-validator"
version = "0.1.0"
description = "DataContract Validator API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "datacontract-cli[parquet]>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
